--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "soter",
     "soteria",
     "soterion",
+    "soteroetoe",
     "utils"
   ],
   "scripts": {
     "test": "vitest"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
